--- a/css/media.css
+++ b/css/media.css
@@ -207,10 +207,9 @@
 	width: 101%;
 	position: relative;
 }
-.hero .cta, .hero .cta.unbg {
-  padding: 7px 13px;
-  font-size: .85rem;
-  font-weight: 400;
+.hero .cta, .hero .cta.unbg { 
+  font-size: .95rem;
+  font-weight: 600;
 }
 .hero .pitch h1{ 
 	font-weight: 400;
@@ -225,13 +224,21 @@
 
 /* FEATURE RULESET */
 section#futures{  
-	position: relative;    
-	background: url(../imgz/bluebg.svg) no-repeat; 
+	position: relative;     
 	border-bottom: 0;
-  padding-bottom: 50px;
+  padding-bottom: 50px; 
+	padding: 75px 0 150px; 
+
 } 
 .futures.container{
-	margin-bottom: .55em;
+	margin-bottom: 0;
+}
+.futures .subheading{
+	margin-top: 0; 
+  width: 90%;
+}
+#futures .subheading img{
+	width: 40px;
 }
 .futures .tradeBx{ 
 	gap: 1em; 
@@ -250,13 +257,22 @@ section#futures{
 .futures .tradeBx .ccc-widget span{ 
   display: block;
 } 
+#futures img.partn{ 
+  width: 150%;   
+	transform: translate(-17%, 30%);
+}
+
 
 /* END of FEATURE RULESET */ 
 
 /* SERVICES RULESET */
 .services{ 
 	padding: 0;
+  margin: 0 auto;
 	max-width: 100%;
+}
+.services .top p{
+  text-align: center;
 }
 .services .service-box{
   flex-direction: column;
@@ -393,6 +409,9 @@ footer .top .col3, footer .top .col2{
 }  
 footer .top .col3{
   text-align: right;
+}
+.formBx input[type=text]{
+	width: 10rem; 
 }
 footer .copyr.container{ 
   width: 100%;
