--- a/css/bit.css
+++ b/css/bit.css
@@ -1,6 +1,11 @@
 /*********************
     - 1. General -
 *********************/
+:root{
+	--pri-color: #00776e;
+	--sec-color: #fdbc00;	
+}
+
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, 
 font, img, strong, b, u, i, ol, ul, li, form, iframe{
 	background:transparent;
@@ -42,7 +47,7 @@ h4,h5{
   color: #092A34;
 	font-size: 1.24rem;
 }
-p{
+p, li{
   font-family: 'Source Sans Pro', sans-serif;
   color: #061C23;
   color: #092A34;
@@ -128,7 +133,7 @@ header .container{
   animation: anim4 2s forwards 3.3s;  
   position: relative;     
 	margin: 0 auto;
-	padding: 5px 2rem;
+	padding: .55rem 2rem; 
 	transition: .25s;
 } 
   
@@ -138,6 +143,7 @@ header .logo{
 }
 header .logo img{ 
 	width: 175px; 
+	transition: .5s;
 }
  
 header .container nav{  
@@ -196,7 +202,7 @@ header .act{
   white-space: nowrap; 
   z-index: 9;
   border: 0;
-  transition: box-shadow .2s;
+  transition: all .2s;
   text-shadow: none;
   margin: 0;
 }
@@ -220,7 +226,7 @@ header .act{
 
 }
 .scroll-up header .container{
-	padding: 2px 2rem;
+	padding: .36rem 2rem;
 }
 .scroll-up header nav a{
   color: #031a48;
@@ -233,7 +239,11 @@ header .act{
  
   
 .scroll-up header .logo img{
-  width: 70px; 
+  /* width: 145px;  */
+	transform: scale(.85);
+}
+.scroll-up header a.act.hide{ 
+	transform: scale(.88);
 }
 /* END of Scroll Stuff */
 /* END of HEADER Ruleset */
@@ -245,13 +255,13 @@ header .act{
 	padding-top: 7.5vh;
   display: flex;
   align-items: center;  
-  gap: 3.3em;
+  gap: 7em;
 }
 .hero.container{
 	margin-bottom: 0;
 }
 .hero > div{
-  width: 100%;
+  width: 100%; 
 }
 .hero .pitch h1{
   color: #114B5F; 
@@ -268,8 +278,9 @@ header .act{
 	line-height: 1.25;
 }
 .hero .imgBx{  
-	width: 145%;
+	width: 125%;
 	position: relative;
+	margin: 50px 0; 
 }
 .hero .imgBx img{
   width: 100%;
@@ -296,16 +307,17 @@ will-change: transform;
 }
 
 .coinx.btc{
-	top: -3%;
+	top: -10%;
 	right: 1%;
+	z-index: 99;
 }
 .coinx.lit{
-	top: 52%;
-	left: -5%;
+	top: 60%;
+	left: -8%;
 }
 .coinx.xco{
-	top: 67%;
-	left: 90%;
+	top: 82%;
+	right: -8%;
 }
  
 .hero .cta{  
@@ -487,9 +499,10 @@ section#futures{
 .how .bottom{ 
 	/* background: url(../imgz/vidimg.jpg) no-repeat center center / cover; */
 	position: relative;
-	border-radius: 30px;
+	border-radius: 20px;
+	max-width: 1020px;
+	margin: 5.5rem auto 7.5em; 
 	overflow: hidden;
-	margin: 5.5rem 0 7.5em;
 }
 .how .bottom::before{
 	position: absolute;
@@ -589,9 +602,11 @@ span.ripple{
   display: flex;
   align-items: center;
   justify-content: center; 
-  white-space: nowrap;    
-	/* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; */
-} 
+  white-space: nowrap;     
+}
+.marquee-content .sun{
+	width: 65%;
+}  
  
 
 /* END of PRESS RULESET */
@@ -662,18 +677,19 @@ footer .col3 a, footer .col2 a{
 footer .formBx{
 	border: 2px solid #00786e;
 	border-radius: 25px;
-	width: fit-content;
+	/* width: fit-content; */
 	overflow: hidden; 
 	padding: 1px;
-
+	display: flex;
+	align-items: center;
 }
-.formBx input[type=text]{
-	width: 11.75rem; 
+.formBx input[type=text]{ 
 	padding: 2px 20px;
 	background-color: transparent;
 	border: 0;
 	outline: 0;
 	color: #fff;
+	flex: 1;
 }
 .formBx input[type=submit]{
 	padding: 10px 30px;
