--- a/css/bit.css
+++ b/css/bit.css
@@ -554,9 +554,9 @@ span.ripple{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 70vh;
-	border: 1px solid springgreen;
-
+	min-height: 70vh; 
+	background: url(../imgz/vidimg.jpg) no-repeat center;
+	background-size: 80%;
 }
 .showvid .btn{
 	position: relative;
@@ -572,6 +572,7 @@ span.ripple{
 	width: 80px;
 	height: 80px;
 	background-color: #f42e79;
+	background-color: var(--sec-color);
 	border-radius: 50%;
 	display: flex;
 	justify-content: center;
