--- a/css/contact.css
+++ b/css/contact.css
@@ -55,10 +55,11 @@ section.reach .contentBx{
 }
 .conta{
   margin-top: 3rem;
+  justify-content: space-between;
 }
 .conta > div{
-  width: 100%;
-}
+  width: 100%;  
+} 
 .conta p{
   font-size: 1.1rem;
 }
